# pbi-load-test

./: README.md  pyproject.toml
docker/: Dockerfile
examples/: README.md  config.yaml
pbi_load_test/: __main__.py  config.py  pbi.py  run.py  scraping.py
pbi_load_test/static/: LoadTest.html
src/pbi_load_test/: cli.py  config.py  pbi.py  run.py  scraping.py
